cmake_minimum_required(VERSION 3.3)
list(APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)
project(scopehal-cmake)

set(WARNINGS "-Wall -Wextra -Wuninitialized ")
set(WARNINGS "${WARNINGS} -Wshadow -Wunsafe-loop-optimizations -Wpedantic -Wcast-align -Wwrite-strings")
set(WARNINGS "${WARNINGS} -Wmissing-declarations -Wvla")
set(CMAKE_CXX_FLAGS "-g -fopenmp ${WARNINGS} --std=c++11 -mtune=native")
set(CMAKE_CXX_FLAGS_RELEASE "-O3")
set(CMAKE_CXX_FLAGS_DEBUG "-O0 -fsanitize=address")

find_package(PkgConfig)
pkg_check_modules(GTKMM gtkmm-3.0)
pkg_check_modules(SIGCXX sigc++-2.0)
pkg_check_modules(GLM glm>=0.9.8)
pkg_search_module(GLM REQUIRED glm>=0.9.8)
find_package(FFTS)

option(BUILD_DOCUMENTATION "Build documentation" ON)
if(BUILD_DOCUMENTATION)
	add_subdirectory(doc)
endif()

add_subdirectory(lib/graphwidget)
add_subdirectory(lib/scopehal)
add_subdirectory(lib/scopeprotocols)
add_subdirectory(lib/scopemeasurements)
add_subdirectory(lib/xptools)
add_subdirectory(lib/log)

option(BUILD_APPS "Build scopehal applications" ON)
if(BUILD_APPS)
	add_subdirectory(src/glscopeclient)
	add_subdirectory(src/psuclient)
	add_subdirectory(src/reflowmon)
endif()

option(BUILD_EXAMPLES "Build examples" ON)
if(BUILD_EXAMPLES)
	add_subdirectory(src/examples/curvetrace)
	add_subdirectory(src/examples/freqresp)
	add_subdirectory(src/examples/fgtest)
endif()

set_property(TARGET scopehal PROPERTY POSITION_INDEPENDENT_CODE ON)
set_property(TARGET log PROPERTY POSITION_INDEPENDENT_CODE ON)
set_property(TARGET xptools PROPERTY POSITION_INDEPENDENT_CODE ON)
set_property(TARGET scopeprotocols PROPERTY POSITION_INDEPENDENT_CODE ON)
